// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Range /> Snapshot range value equal right point 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 5px;
  background: #eceeef;
  border-radius: 5px;
  box-shadow: inset 0 1px 2px rgba(90,97,105,0.1);
}

.c1 {
  position: absolute;
  top: 0;
  left: 0px;
  right: -205px;
  height: 5px;
  border-radius: 5px;
  background-color: #007bff;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
</div>
`;

exports[`<Range /> Snapshot start range value equal left point 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 5px;
  background: #eceeef;
  border-radius: 5px;
  box-shadow: inset 0 1px 2px rgba(90,97,105,0.1);
}

.c1 {
  position: absolute;
  top: 0;
  left: 30px;
  right: -205px;
  height: 5px;
  border-radius: 5px;
  background-color: #007bff;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
</div>
`;

exports[`<Range /> Snapshot without leftPoint props range value should equal 0 1`] = `
.c0 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 5px;
  background: #eceeef;
  border-radius: 5px;
  box-shadow: inset 0 1px 2px rgba(90,97,105,0.1);
}

.c1 {
  position: absolute;
  top: 0;
  left: 0px;
  right: -205px;
  height: 5px;
  border-radius: 5px;
  background-color: #007bff;
}

<div
  class="c0"
>
  <div
    class="c1"
  />
</div>
`;
